Fix horizontal scroll. Remove vertical center.

--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -1,8 +1,6 @@
 
 // Base
-*, *:before, *:after {
-	box-sizing: inherit;
-}
+* {box-sizing: border-box}
 
 html, body {
 	height: 100%;
@@ -19,6 +17,7 @@ body {
 	font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji;
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
+	margin: 0;
 }
 
 body, h1, h2, h3, h4, h5, h6, p, ol, ul {
@@ -27,15 +26,27 @@ body, h1, h2, h3, h4, h5, h6, p, ol, ul {
 	font-weight: 400;
 }
 
+h3 {
+	margin-bottom: 1.5rem;
+}
+
 p {
 	margin-bottom: 1.5rem;
 }
 
 ol, ul {
 	list-style: none;
+
+	&.small {
+		font-size: 0.85rem;
+	}
 }
 
 img {
 	max-width: 100%;
 	height: auto;
+}
+
+a {
+	text-decoration: none;
 }
